force-app/main/default/objects/Executive_KPI__mdt/Executive_KPI__mdt.object-meta.xml
<CustomObject>
    <label>Executive KPI</label>
    <pluralLabel>Executive KPIs</pluralLabel>
    <description>Executive KPI metrics configuration for the Prometheion Executive KPI Dashboard</description>
</CustomObject>