force-app/main/default/objects/Executive_KPI__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the KPI metric and what it measures</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>