force-app/main/default/objects/Executive_KPI__mdt/fields/Format_Type__c.field-meta.xml
<CustomField>
    <fullName>Format_Type__c</fullName>
    <description>Format type for displaying the metric value (e.g., currency, percentage, number)</description>
    <label>Format Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>number</fullName>
                <label>Number</label>
            </value>
            <value>
                <fullName>currency</fullName>
                <label>Currency</label>
            </value>
            <value>
                <fullName>percentage</fullName>
                <label>Percentage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>