force-app/main/default/objects/Executive_KPI__mdt/fields/Green_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Green_Threshold__c</fullName>
    <description>Threshold value for green status (good performance)</description>
    <label>Green Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>