force-app/main/default/objects/Executive_KPI__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this KPI metric is active and should be displayed on the dashboard</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>