force-app/main/default/objects/Executive_KPI__mdt/fields/KPI_Name__c.field-meta.xml
<CustomField>
    <fullName>KPI_Name__c</fullName>
    <description>Unique name identifier for the KPI metric</description>
    <label>KPI Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>