force-app/main/default/objects/Executive_KPI__mdt/fields/Metric_Label__c.field-meta.xml
<CustomField>
    <fullName>Metric_Label__c</fullName>
    <description>Display label for the KPI metric</description>
    <label>Metric Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>