force-app/main/default/objects/Executive_KPI__mdt/fields/Red_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Red_Threshold__c</fullName>
    <description>Threshold value for red status (poor performance)</description>
    <label>Red Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>