force-app/main/default/objects/Executive_KPI__mdt/fields/SOQL_Query__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Query__c</fullName>
    <description>SOQL query string (must use aggregate functions) to calculate the KPI metric value</description>
    <label>SOQL Query</label>
    <length>32768</length>
    <required>true</required>
    <type>LongTextArea</type>
</CustomField>