force-app/main/default/objects/Executive_KPI__mdt/fields/Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Value__c</fullName>
    <description>Target value for the KPI metric</description>
    <label>Target Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>