force-app/main/default/objects/Executive_KPI__mdt/fields/Trend_Direction__c.field-meta.xml
<CustomField>
    <fullName>Trend_Direction__c</fullName>
    <description>Direction that indicates good performance (higher_is_better or lower_is_better)</description>
    <label>Trend Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>higher_is_better</fullName>
                <default>true</default>
                <label>Higher is Better</label>
            </value>
            <value>
                <fullName>lower_is_better</fullName>
                <label>Lower is Better</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>