force-app/main/default/objects/Executive_KPI__mdt/fields/Yellow_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Yellow_Threshold__c</fullName>
    <description>Threshold value for yellow status (warning level)</description>
    <label>Yellow Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>